Fix spacing issues

--- a/src/components/Destination.module.css
+++ b/src/components/Destination.module.css
@@ -1,8 +1,10 @@
 .container {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   width: 100%;
   padding: 40px;
+  margin-left: 20px;
+  margin-right: 50px;
 }
 
 .cardImage {
